--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   "license": "UNLICENSED",
   "dependencies": {
     "4chanapi.js": "^1.1.1",
-    "bluebird": "^3.5.0",
+    "bitcoin-promise": "^1.3.1",
+    "bluebird": "^3.5.1",
     "colors": "^1.1.2",
     "csrf": "^3.0.6",
     "discord.js": "^11.0.0",
@@ -30,8 +31,9 @@
     "opusscript": "0.0.2",
     "pad": "^1.1.0",
     "redis": "^2.6.5",
-    "request": "^2.81.0",
-    "request-promise": "^4.2.0",
+    "renge": "0.0.2",
+    "request": "^2.83.0",
+    "request-promise": "^4.2.2",
     "simple-oauth2": "^1.1.0",
     "steam-api": "^1.1.3",
     "sublevel": "^2.4.0",
