--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "node-opus": "^0.2.6",
     "opusscript": "0.0.2",
     "pad": "^1.1.0",
+    "ramda": "^0.25.0",
     "redis": "^2.6.5",
     "renge": "0.0.3",
     "request": "^2.83.0",
