--- a/package.json
+++ b/package.json
@@ -37,8 +37,7 @@
     "request-promise": "^4.2.2",
     "simple-oauth2": "^1.1.0",
     "steam-api": "^1.1.3",
-    "sublevel": "^2.4.0",
-    "uws": "^0.12.0"
+    "sublevel": "^2.4.0"
   },
   "devDependencies": {
     "mocha": "^3.2.0",
