finally un-fucked renge dep

--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "bluebird": "^3.5.1",
     "colors": "^1.1.2",
     "csrf": "^3.0.6",
-    "discord.js": "^11.0.0",
+    "discord.js": "^11.3.2",
     "dotenv": "^4.0.0",
     "erlpack": "github:hammerandchisel/erlpack#master",
     "express": "^4.15.0",
@@ -32,7 +32,7 @@
     "pad": "^1.1.0",
     "ramda": "^0.25.0",
     "redis": "^2.6.5",
-    "renge": "0.0.3",
+    "renge": "^0.0.10",
     "request": "^2.83.0",
     "request-promise": "^4.2.2",
     "simple-oauth2": "^1.1.0",
