--- a/package.json
+++ b/package.json
@@ -33,8 +33,9 @@
     "ramda": "^0.25.0",
     "redis": "^2.6.5",
     "renge": "^0.0.10",
-    "request": "^2.83.0",
+    "request": "^2.87.0",
     "request-promise": "^4.2.2",
+    "request-promise-any": "^1.0.5",
     "simple-oauth2": "^1.1.0",
     "steam-api": "^1.1.3",
     "sublevel": "^2.4.0"
